--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "homepage": "https://NickPosvystak.github.io/car/",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +18,7 @@
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3"
   },
