--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
